[project]
name = "gis-hydro-mcp"
version = "0.1.0"
description = "Topographic + hydrological connectivity MCP server (companion to gdal-mcp)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GIS DataBase contributors" }]
dependencies = [
  "fastmcp>=2.0",
  "pydantic>=2.7",
  "numpy>=1.26",
  "rasterio>=1.3",
  "shapely>=2.0",
  "geopandas>=0.14",
  "pyogrio>=0.7",
  "pyproj>=3.6",
  "networkx>=3.2",
]

[project.scripts]
gis-hydro = "gis_hydro_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gis_hydro_mcp"]
